--- a/assets/css/chat_css.css
+++ b/assets/css/chat_css.css
@@ -47,7 +47,7 @@
 
 #frame #sidepanel #profile {
     width: 80%;
-    margin: 25px auto;
+    margin: 5px auto;
 }
 
 @media screen and (max-width: 735px) {
@@ -78,8 +78,8 @@
 }
 
 #frame #sidepanel #profile .wrap {
-    height: 60px;
-    line-height: 60px;
+    height: 40px;
+    line-height: 40px;
     overflow: hidden;
     -moz-transition: 0.3s height ease;
     -o-transition: 0.3s height ease;
@@ -94,7 +94,7 @@
 }
 
 #frame #sidepanel #profile .wrap img {
-    width: 50px;
+    width: 40px;
     border-radius: 50%;
     padding: 3px;
     border: 2px solid #f99d27;
@@ -335,6 +335,7 @@
     border-top: 1px solid #f99d27;
     border-bottom: 1px solid #f99d27;
     font-weight: 300;
+    margin-bottom:2px;
 }
 
 @media screen and (max-width: 735px) {
@@ -380,14 +381,14 @@
 }
 
 #frame #sidepanel #contacts {
-    height: calc(100% - 177px);
+    height: calc(100% - 127px);
     overflow-y: scroll;
     overflow-x: hidden;
 }
 
 @media screen and (max-width: 735px) {
     #frame #sidepanel #contacts {
-        height: calc(100% - 149px);
+        height: calc(100% - 119px);
         overflow-y: scroll;
         overflow-x: hidden;
     }
@@ -412,7 +413,7 @@
 
 #frame #sidepanel #contacts ul li.contact {
     position: relative;
-    padding: 10px 0 15px 0;
+    /* padding: 5px 0 10px 0; */
     font-size: 0.9em;
     cursor: pointer;
 }
@@ -472,7 +473,7 @@
 }
 
 #frame #sidepanel #contacts ul li.contact .wrap img {
-    width: 40px;
+    width: 25px;
     border-radius: 50%;
     float: left;
     margin-right: 10px;
@@ -485,7 +486,7 @@
 }
 
 #frame #sidepanel #contacts ul li.contact .wrap .meta {
-    padding: 5px 0 0 0;
+    padding: 2px 0 0 0;
 }
 
 @media screen and (max-width: 735px) {
@@ -495,7 +496,7 @@
 }
 
 #frame #sidepanel #contacts ul li.contact .wrap .meta .name {
-    font-weight: 600;
+    font-weight: 500;
 }
 
 #frame #sidepanel #contacts ul li.contact .wrap .meta .preview {
