--- a/assets/css/chat_css.css
+++ b/assets/css/chat_css.css
@@ -28,7 +28,7 @@
     float: left;
     min-width: 280px;
     max-width: 340px;
-    width: 40%;
+    width: 20%;
     height: 100%;
     background: #005495;
     color: #f5f5f5;
@@ -47,7 +47,7 @@
 
 #frame #sidepanel #profile {
     width: 80%;
-    margin: 5px auto;
+    margin: 10px auto;
 }
 
 @media screen and (max-width: 735px) {
@@ -133,11 +133,14 @@
 #frame #sidepanel #profile .wrap p {
     float: left;
     margin-left: 15px;
+
+    font-size: 16px;
 }
 
 @media screen and (max-width: 735px) {
     #frame #sidepanel #profile .wrap p {
         display: none;
+        font-size: 16px;
     }
 }
 
@@ -145,6 +148,7 @@
     float: right;
     margin-top: 23px;
     font-size: 0.8em;
+    /* font-size: 16px; */
     cursor: pointer;
     color: #005495;
 }
@@ -414,7 +418,8 @@
 #frame #sidepanel #contacts ul li.contact {
     position: relative;
     padding: 5px 0 10px 0;
-    font-size: 0.9em;
+    /* font-size: 0.9em; */
+    font-size: 16px;
     cursor: pointer;
 }
 
@@ -586,7 +591,8 @@
 
 #frame .content {
     float: right;
-    width: 60%;
+    /* width: 60%; */
+    width: 80%;
     height: 100%;
     overflow: hidden;
     position: relative;
@@ -601,7 +607,8 @@
 
 @media screen and (min-width: 900px) {
     #frame .content {
-        width: calc(100% - 340px);
+        /* width: calc(100% - 340px); */
+        /* width: calc(100% - 280px); */
     }
 }
 
@@ -671,6 +678,7 @@
     margin: 15px 15px 5px 15px;
     width: calc(100% - 25px);
     font-size: 0.9em;
+    /* font-size: 16px; */
 }
 
 #frame .content .messages ul li:nth-last-child(1) {
@@ -825,3 +833,76 @@
 #frame #contacts .contactLi p.contactName{
     margin-bottom: 0px !important;
 }
+
+
+
+.drawer-container {
+    position: relative;
+    height: 100vh;
+    overflow-x: hidden;
+  }
+  
+  .drawer {
+    position: fixed;
+    top: 0;
+    left: -300px; /* Initial position off-screen */
+    width: 300px;
+    height: 100%;
+    background-color: #3498db;
+    color: #fff;
+    padding: 20px;
+    box-sizing: border-box;
+    transition: left 0.4s ease;
+  }
+  .btn-circle.btn-xl {
+    /* width: 70px;
+    height: 70px;
+    padding: 10px 16px;
+    border-radius: 0px;
+    font-size: 24px;
+    line-height: 1.33; */
+
+    display: block;
+    /* padding: 10px 16px; */
+    margin: 10px 16px 30px;
+    margin-bottom: 30px;
+    width: 45px;
+    height: 45px;
+    text-align: center;
+    color: #fff;
+    line-height: 50px;
+    position: absolute;
+    /* border-radius: 50% 50%;
+    border-radius: 0px; */
+    border-radius: 5px;
+    bottom: 0px;
+    margin-bottom: 300px;
+    right: 0px;
+    /* opacity: 0.3; */
+    opacity: 1;
+    transition: all 0.4s;
+    border: 5px solid #f99d27 !important;
+}
+
+  /* .btn-circle.btn-xl {
+    display: block;
+    margin: 10px 16px 30px;
+    margin-bottom: 30px;
+    width: 45px;
+    height: 45px;
+    text-align: center;
+    color: #fff;
+    line-height: 50px;
+    position: absolute;
+    border-radius: 5px;
+    bottom: 0;
+    right: 0;
+    opacity: 1;
+    transition: all 0.4s;
+    border: 5px solid #f99d27 !important;
+    cursor: pointer;
+  } */
+  
+  .btn-circle.btn-xl:hover {
+    background-color: #f99d27;
+  }
