--- a/assets/css/chat_css.css
+++ b/assets/css/chat_css.css
@@ -13,8 +13,10 @@
     min-height: 300px;
     max-height: 720px;
     background: #e6eaea;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
+    /* border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px; */
+    border: 1px solid;
+    border-radius: 20px;
 }
 
 @media screen and (max-width: 360px) {
@@ -617,10 +619,12 @@
     height: 60px;
     line-height: 60px;
     background: #f5f5f5;
+    border-radius: 10px;
+  border: 1px black solid;
 }
 
 #frame .content .contact-profile img {
-    width: 40px;
+    width: 30px;
     border-radius: 50%;
     float: left;
     margin: 9px 12px 0 9px;
@@ -654,6 +658,9 @@
     overflow-y: scroll;
     overflow-x: hidden;
     width: 100% !important;
+    background-color: #fff;
+    border: 1px solid;
+  border-radius: 10px;
 }
 
 @media screen and (max-width: 735px) {
@@ -693,6 +700,10 @@
     /*background: #005495;*/
     background: #005495 !important;
     color: #f5f5f5;
+    font-size: 15px;
+}
+#frame .content .messages ul li.sent p small {
+    color: #f5f5f5;
 }
 
 #frame .content .messages ul li.replies img {
@@ -703,6 +714,7 @@
 #frame .content .messages ul li.replies p {
     background: #f5f5f5;
     float: right;
+    font-size: 15px;
 }
 
 #frame .content .messages ul li img {
@@ -728,8 +740,16 @@
 #frame .content .message-input {
     position: absolute;
     bottom: 0;
-    width: 100%;
+    /* width: 100%; */
+    width: 98.5%;
     z-index: 99;
+    border: 1px solid;
+    /* border-radius: 10px; */
+    border-bottom-right-radius: 10px;
+    border-top-right-radius: 10px;
+}
+.message-input{
+    background: white;
 }
 
 #frame .content .message-input .wrap {
@@ -781,12 +801,15 @@
 
 #frame .content .message-input .wrap button {
     float: right;
-    border: none;
+    /* border: none; */
+    border: 1px solid burlywood;
     width: 50px;
     padding: 12px 0;
+    /* padding: 5px 0; */
     cursor: pointer;
     background: #f99d27;
     color: #f5f5f5;
+    border-radius: 80px;
 }
 
 @media screen and (max-width: 735px) {
@@ -906,3 +929,37 @@
   .btn-circle.btn-xl:hover {
     background-color: #f99d27;
   }
+
+ #dateMsg b{
+    color: #cd5656;
+    text-align: center;
+    background: #f5f5f5;
+    background-color: rgb(245, 245, 245);
+    clear: both;
+    margin: 15px 15px 5px 15px;
+    width: 100px;
+    font-size: 0.9em;
+    font-size: smaller;
+    background-color: #c6c3c3;
+    /* border-radius: 5px; */
+    border-radius: 15px;
+    padding: 5px;
+  }
+  #contacts {
+    overflow-y: auto; /* Enable vertical scrollbar */
+    scrollbar-color: #f99d27 #f99d27; /* Firefox */
+    scrollbar-width: thik; /* Firefox */
+
+    /* For WebKit browsers (Chrome, Safari) */
+    &::-webkit-scrollbar {
+        width: 18px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: #f99d27;
+    }
+
+    &::-webkit-scrollbar-track {
+        background-color: #f99d27;
+    }
+}
