--- a/assets/css/chat_css.css
+++ b/assets/css/chat_css.css
@@ -747,6 +747,7 @@
     /* border-radius: 10px; */
     border-bottom-right-radius: 10px;
     border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
 .message-input{
     background: white;
