--- a/assets/css/chat_css.css
+++ b/assets/css/chat_css.css
@@ -932,7 +932,7 @@
   }
 
  #dateMsg b{
-    color: #cd5656;
+    color: #000;
     text-align: center;
     background: #f5f5f5;
     background-color: rgb(245, 245, 245);
@@ -945,6 +945,7 @@
     /* border-radius: 5px; */
     border-radius: 15px;
     padding: 5px;
+    font-weight: bolder;
   }
   #contacts {
     overflow-y: auto; /* Enable vertical scrollbar */
