--- a/assets/css/chat_css.css
+++ b/assets/css/chat_css.css
@@ -437,7 +437,7 @@
 
 #frame #sidepanel #contacts ul li.contact.active {
     background: #f99d27;
-    border-right: 5px solid #005495;
+    /* border-right: 5px solid #005495; */
 }
 
 #frame #sidepanel #contacts ul li.contact.active span.contact-status {
@@ -681,8 +681,8 @@
 #frame .content .messages ul li {
     display: inline-block;
     clear: both;
-    float: left;
-    margin: 15px 15px 5px 15px;
+    /* float: left;
+    margin: 15px 15px 5px 15px; */
     width: calc(100% - 25px);
     font-size: 0.9em;
     /* font-size: 16px; */
@@ -739,9 +739,9 @@
 
 #frame .content .message-input {
     position: absolute;
-    bottom: 0;
+    bottom: 10px;
     /* width: 100%; */
-    width: 98.5%;
+    width: 98.1%;
     z-index: 99;
     border: 1px solid;
     /* border-radius: 10px; */
@@ -803,12 +803,12 @@
 #frame .content .message-input .wrap button {
     float: right;
     /* border: none; */
-    border: 1px solid burlywood;
+    border: 1px solid #f99d27;
     width: 50px;
     padding: 12px 0;
     /* padding: 5px 0; */
     cursor: pointer;
-    background: #f99d27;
+    background: #005495;
     color: #f5f5f5;
     border-radius: 80px;
 }
@@ -820,7 +820,8 @@
 }
 
 #frame .content .message-input .wrap button:hover {
-    background: #005495;
+    border: 1px solid #005495;
+    background: #f99d27;
 }
 
 #frame .content .message-input .wrap button:focus {
@@ -856,6 +857,10 @@
 
 #frame #contacts .contactLi p.contactName{
     margin-bottom: 0px !important;
+}
+
+#frame .content .messages ul{
+    padding-left: 10px !important;
 }
 
 
@@ -931,7 +936,7 @@
     background-color: #f99d27;
   }
 
- #dateMsg b{
+ .dateMsg b{
     color: #000;
     text-align: center;
     background: #f5f5f5;
