--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23108,4 +23108,10 @@ DataTables_Table_0_wrapper .btn-secondary {
     font-size: 14px !important;
 }
 
+.theme-primary .btn-success:hover, .theme-primary .btn-success:active, .theme-primary .btn-success:focus, .theme-primary .btn-success.active {
+  background-color: #005495 !important;
+  border-color: #005495 !important;
+  color: #ffffff !important;
+}
+
 /*# sourceMappingURL=style.css.map */
